--- a/package.json
+++ b/package.json
@@ -25,7 +25,9 @@
     "@nestjs/core": "^11.0.1",
     "@nestjs/passport": "^11.0.5",
     "@nestjs/platform-express": "^11.0.1",
+    "@nestjs/platform-socket.io": "^11.0.9",
     "@nestjs/serve-static": "^5.0.2",
+    "@nestjs/websockets": "^11.0.9",
     "@prisma/client": "6.2.1",
     "bcrypt": "^5.1.1",
     "class-transformer": "^0.5.1",
@@ -38,6 +40,7 @@
     "pino-http": "^10.4.0",
     "reflect-metadata": "^0.2.2",
     "rxjs": "^7.8.1",
+    "socket.io": "^4.8.1",
     "stripe": "^17.6.0"
   },
   "devDependencies": {
